--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "boat-ride"
-version = "0.0.1"
+version = "0.1.0"
 requires-python = ">=3.10"
 dependencies = [
   "pydantic>=2.5",
   "pydantic-settings>=2.0",
   "rich>=13.0",
   "numpy>=1.26",
-  "requests>=2.31"
+  "requests>=2.31",
+  "shapely>=2.0",
+  "pyshp>=2.3",
+  "fastapi>=0.109",
+  "uvicorn[standard]>=0.27",
 ]
 
 
